bad/return_array_in_func_returning_void.example_compiler_output
ERROR
[1mbad/return_array_in_func_returning_void.lat:3:22: [1;31merror: [0;1mreturned value of type `int[]` is not convertible to return type `void`[m
void test() { return new int[3]; }
                     [1;32m^[m
